# goal_validity_checker

./: .gitignore  README.md
goal_checker/: CMakeLists.txt  package.xml
goal_checker/behavior_trees/: navigate_to_pose_w_replanning_and_recovery.xml  nodes.xml
goal_checker/goal_checker/: __init__.py  find_new_goal.py  goal_validity_checker.py  map_data.py  search.py
goal_checker/include/goal_checker/: bt_srv_node.hpp
goal_checker/launch/: goal_checker_launch.py
goal_checker/param/: goal_validity_checker.yaml
goal_checker/src/: bt_srv_node.cpp
goal_checker/tests/: test_goal_validity_checker.py  test_map_data.py  test_search.py
goal_checker_msgs/: CMakeLists.txt  package.xml
goal_checker_msgs/srv/: GoalChecker.srv
