<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>goal_checker</name>
  <version>1.0.0</version>
  <description>Goal Validity Checker checking for valid goal poses</description>
  <maintainer email="jason.koubi@karelics.fi">Jason Koubi</maintainer>
  <license>GPL 3.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>goal_checker_msgs</depend>
  <depend>nav2_behavior_tree</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
